desktop layout and spacing footer fix

--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -1148,6 +1148,9 @@
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
+    .footer-1390{
+        padding: 2rem;
+    }
     #footer-1390 .cs-top {
         align-items: flex-start;
     }
@@ -1155,15 +1158,16 @@
         flex-direction: row;
         justify-content: center;
     }
-    #footer-1390 .cs-flex {
-        margin: 0 0 0 auto;
-        /* sends it to the right in the 3rd position */
-        order: 3;
-    }
     #footer-1390 .cs-social {
         /* sends it to the right in the 2nd position */
         order: 2;
+        margin: 0 auto;
     }
+    #footer-1390 .cs-flex {
+        /* sends it to the right in the 3rd position */
+        order: 3;
+    }
+
 }
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
